--- a/ComoHacerPeticionesGet/src/main/resources/templates/index.html
+++ b/ComoHacerPeticionesGet/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 
 <body>
 
-    <h5>localhost:?????/peticiones1?nombre=Maria</h5> <!-- Muestra la ruta de la petición GET que se debe hacer -->
+    <h5>/peticiones1?clave_nombre=Maria</h5> <!-- Muestra la ruta de la petición GET que se debe hacer -->
     <h3>
-        Metodo 1 => @RequestParam((name = "nombre") String elNombre)  <span th:text="${nombre}"></span> <!-- Explicación del método utilizado y muestra el nombre recibido -->
+        Metodo 1 => @RequestParam((name = "nombre") String elNombre)  <span th:text="${clave_nombre}"></span> <!-- Explicación del método utilizado y muestra el nombre recibido -->
     </h3>
 
 </body>
