--- a/ComoHacerPeticionesGet/src/main/resources/templates/index2.html
+++ b/ComoHacerPeticionesGet/src/main/resources/templates/index2.html
@@ -8,9 +8,9 @@
 
 <body>
 
-    <h5>http://localhost:????/peticiones2/Maria</h5> <!-- Muestra la ruta de la petición GET que se debe hacer para utilizar el segundo método -->
+    <h5>/peticiones2/Maria</h5> <!-- Muestra la ruta de la petición GET que se debe hacer para utilizar el segundo método -->
     <h3>
-        Metodo => @PathVariable(name = "nombre") String elNombre) <span th:text="${nombre}"></span> <!-- Explicación del método utilizado y muestra el nombre recibido -->
+        Metodo => @PathVariable(name = "clave_nombre") String valor_nombre) <span th:text="${clave_nombre}"></span> <!-- Explicación del método utilizado y muestra el nombre recibido -->
     </h3>
 </body>
 
