--- a/ComoHacerPeticionesGet/src/main/resources/templates/index2.html
+++ b/ComoHacerPeticionesGet/src/main/resources/templates/index2.html
@@ -8,10 +8,10 @@
 
 <body>
 
-    <h5>/peticiones2/Maria</h5> <!-- Muestra la ruta de la petición GET que se debe hacer para utilizar el segundo método -->
-    <h3>
-        Metodo => @PathVariable(name = "clave_nombre") String valor_nombre) <span th:text="${clave_nombre}"></span> <!-- Explicación del método utilizado y muestra el nombre recibido -->
-    </h3>
+<h1 style="color: rgb(255, 0, 0); font-size: 36px; text-shadow: 2px 2px 4px rgb(192, 192, 192);">Peticiones2 usa @PathVariable para capturar el parámetro desde la ruta (/peticiones2/Maria) </h1>
+
+<h1 th:text="${clave_nombre}"></h1> <!-- Explicación del método utilizado y muestra el nombre recibido -->
+   
 </body>
 
 
