--- a/ComoHacerPeticionesGet/src/main/resources/templates/index.html
+++ b/ComoHacerPeticionesGet/src/main/resources/templates/index.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
+<h1 style="color: rgb(255, 0, 0); font-size: 36px; text-shadow: 2px 2px 4px rgb(192, 192, 192);">Peticiones1 usa @RequestParam para capturar el parámetro desde la query string (/peticiones1?clave_nombre=Maria)</h1>
+<h1 style="color: rgb(255, 0, 0); font-size: 36px; text-shadow: 2px 2px 4px rgb(192, 192, 192);">Peticiones2 usa @PathVariable para capturar el parámetro desde la ruta (/peticiones2/Maria) </h1>
 
-    <h5>/peticiones1?clave_nombre=Maria</h5> <!-- Muestra la ruta de la petición GET que se debe hacer -->
-    <h3>
-        Metodo 1 => @RequestParam((name = "nombre") String elNombre)  <span th:text="${clave_nombre}"></span> <!-- Explicación del método utilizado y muestra el nombre recibido -->
-    </h3>
+<h1 th:text="${clave_nombre}"></h1> <!-- Explicación del método utilizado y muestra el nombre recibido -->
 
 </body>
 
