--- a/PeticionesPost_Formulario_Redirecciones/src/main/resources/templates/resultados.html
+++ b/PeticionesPost_Formulario_Redirecciones/src/main/resources/templates/resultados.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8"> <!-- Especifica la codificación de caracteres como UTF-8 -->
-    <title>Tabla Estilizada</title> <!-- Título de la página -->
+    <title>Tabla Resultados</title> <!-- Título de la página -->
     <style>
         /* Estilos para el cuerpo del documento */
         body {
