--- a/Logs_y_Componentes/src/main/resources/templates/vista1.html
+++ b/Logs_y_Componentes/src/main/resources/templates/vista1.html
@@ -3,6 +3,23 @@
 <head>
 <meta charset="utf-8">
 <title>Logs_y_Componentes.controller</title>
+   <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff; /* Fondo azul claro */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            color: #007bff; /* Texto azul */
+            font-size: 48px; /* Tamaño grande del texto */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Sombra de texto sutil */
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
 <h1>Hola desde la vista 1</h1>
